--- a/sysutils/mtools/Makefile
+++ b/sysutils/mtools/Makefile
@@ -3,10 +3,10 @@
 # Date created:         22 Jan 1998
 # Whom:                 is
 #
-# $NetBSD: Makefile,v 1.4 1998/02/10 21:46:46 frueauf Exp $
+# $NetBSD: Makefile,v 1.5 1998/02/16 07:41:31 hubertf Exp $
 #
 
-DISTNAME=	mtools-3.6
+DISTNAME=	mtools-3.8
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GNU}
 #MASTER_SITES=	ftp://ftp.cs.uni-bonn.de/pub/gnu/
