--- a/net/wget/Makefile
+++ b/net/wget/Makefile
@@ -3,7 +3,8 @@
 # Date created:		31 December 1996
 # Whom:			Thomas Gellekum <tg@FreeBSD.ORG>
 #
-# $Id: Makefile,v 1.1.1.1 1998/02/17 08:07:09 hubertf Exp $
+# $NetBSD: Makefile,v 1.2 1998/02/17 08:20:03 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.4 1997/05/22 07:53:29 tg Exp
 #
 
 DISTNAME=	wget-1.4.5
@@ -11,6 +12,9 @@ CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GNU}
 
 MAINTAINER=	tg@FreeBSD.ORG
+
+BUILD_DEPENDS=  ${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
+RUN_DEPENDS=    ${PREFIX}/bin/install-info:${PORTSDIR}/devel/gtexinfo
 
 GNU_CONFIGURE=	yes
 MAN1=		wget.1
