--- a/x11/xneko/Makefile
+++ b/x11/xneko/Makefile
@@ -3,6 +3,7 @@
 # Date created:		22 December 1995
 # Whom:			markm
 #
+# $NetBSD: Makefile,v 1.2 1998/02/17 23:47:48 tron Exp $
 # $FreeBSD Id: Makefile,v 1.6 1997/03/12 08:21:35 asami Exp
 #
 
@@ -16,5 +17,7 @@ MAINTAINER=	markm@FreeBSD.ORG
 USE_X11=	yes
 IGNOREFILES=	${DISTFILES}
 WRKSRC=		${WRKDIR}/pub/bsd-sources/4.4BSD-Lite/usr/src/games/xneko
+
+MAN6=	xneko.6
 
 .include <bsd.port.mk>
