--- a/x11/Makefile
+++ b/x11/Makefile
@@ -99,6 +99,7 @@
     SUBDIR += xmascot
 #    SUBDIR += xmbdfed
 #    SUBDIR += xmold
+    SUBDIR += xneko
     SUBDIR += xpns
 #    SUBDIR += xpostit
 #    SUBDIR += xpostitPlus
