--- a/fonts/cyr-rfx-share/Makefile.common
+++ b/fonts/cyr-rfx-share/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.2 2002/07/13 15:43:36 wiz Exp $
+# $NetBSD: Makefile.common,v 1.3 2004/03/01 00:56:24 kristerw Exp $
 
 DISTNAME=	cyr-rfx-${CYR_RFX_ENCODING}-1.1
 CATEGORIES=	fonts x11
@@ -19,6 +19,6 @@ NO_CONFIGURE=	yes
 NO_BUILD=	yes
 
 do-install:
-	@${GTAR} xzf ${_DISTDIR}/${DISTFILES} -C ${PREFIX}/lib/X11/fonts/local ${CYR_RFX_ENCODING}/misc ${CYR_RFX_ENCODING}/75dpi
+	@cd ${PREFIX}/lib/X11/fonts/local && ${GTAR} xzf ${_DISTDIR}/${DISTFILES} ${CYR_RFX_ENCODING}/misc ${CYR_RFX_ENCODING}/75dpi
 
 .include "../../mk/bsd.pkg.mk"
