--- a/devel/autogen/Makefile
+++ b/devel/autogen/Makefile
@@ -1,21 +1,21 @@
-# $NetBSD: Makefile,v 1.13 2004/02/14 17:21:36 jlam Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/01 02:26:13 minskim Exp $
 
-DISTNAME=	autogen-5.5.3
-PKGREVISION=	5
+DISTNAME=	autogen-5.6.0
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=autogen/}
+EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	kristerw@NetBSD.org
 HOMEPAGE=	http://autogen.sourceforge.net/
 COMMENT=	The Automated Program Generator
 
-USE_BUILDLINK2=		yes
+USE_BUILDLINK3=		yes
 USE_GNU_TOOLS+=		make
 GNU_CONFIGURE=		yes
 USE_LIBTOOL=		yes
 USE_MAKEINFO=		YES
 INFO_FILES=		autogen.info
 
-.include "../../lang/guile14/buildlink2.mk"
-.include "../../textproc/libxml2/buildlink2.mk"
+.include "../../lang/guile/buildlink3.mk"
+.include "../../textproc/libxml2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
