--- a/security/Makefile
+++ b/security/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.170 2004/02/27 22:14:10 itojun Exp $
+# $NetBSD: Makefile,v 1.171 2004/03/01 09:45:31 cube Exp $
 #
 
 COMMENT=	Security tools
@@ -160,6 +160,7 @@ SUBDIR+=	smimemsg
 SUBDIR+=	smtpd
 SUBDIR+=	sniff
 SUBDIR+=	snortsnarf
+SUBDIR+=	srm
 SUBDIR+=	srp_client
 SUBDIR+=	ssh
 SUBDIR+=	ssh-askpass
