--- a/x11/kdelibdocs3/Makefile
+++ b/x11/kdelibdocs3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2004/02/15 11:03:12 markd Exp $
+# $NetBSD: Makefile,v 1.16 2004/03/01 13:51:47 markd Exp $
 
 DISTNAME=	kdelibs-3.2.0
 PKGNAME=	kdelibdocs-3.2.0
@@ -9,6 +9,7 @@ COMMENT=	KDE library documentation
 .include "../../meta-pkgs/kde3/Makefile.kde3"
 
 BUILD_DEPENDS+=		doxygen>=1.3.5nb2:../../devel/doxygen
+BUILD_DEPENDS+=		qt3-docs>=3.1.1:../../x11/qt3-docs
 
 USE_BUILDLINK2=		YES
 ALL_TARGET=		apidox
